<resources>
    <string name="app_name">Simple_App</string>
    <string name="instagram">Instagram</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="link">Don\'t have an account?</string>
    <string name="signup"> Sign up.</string>
    <string name="number">Phone number</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charecter_list">Charecter list</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="app">App</string>
    <string name="logout">logout</string>
    <string name="exit">Exit</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="edit">edit</string>
    <string name="fill_in_your_email">Fill in your email</string>
</resources>